--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "A web app that revolutionizes the way you and your friends connect over music.",
   "main": "index.js",
   "scripts": {
+    "client": "cd client && npm start", 
+    "server": "node server", 
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/crab-projects/spotify-social.git"
   },
-  "author": "Alec Chen",
+  "author": "Alec Chen, Rustom Ichhaporia",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/crab-projects/spotify-social/issues"
   },
-  "homepage": "https://github.com/crab-projects/spotify-social#readme"
+  "homepage": "https://github.com/crab-projects/spotify-social#readme",
+  "dependencies": {
+    "concurrently": "^6.0.0"
+  }
 }
