--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "dependencies": {
     "concurrently": "^6.0.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
