--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "client": "cd client && npm start",
-    "build": "cd client && npm run build",
+    "build": "tsc && cd client && npm run build",
     "server": "node server",
     "start": "concurrently \"npm run server\" \"npm run build\"",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
@@ -25,5 +25,10 @@
   "dependencies": {
     "concurrently": "^6.0.0",
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.31",
+    "typescript": "^4.2.3"
   }
 }
