--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "concurrently \"npm run server\" \"npm run build\"",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build", 
+    "format": "npx prettier --write ."
   },
   "repository": {
     "type": "git",
