--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
   "homepage": "https://github.com/crab-projects/spotify-social#readme",
   "dependencies": {
     "concurrently": "^6.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
-    "typescript": "^4.2.3",
-    "prettier": "^2.2.1"
+    "@types/request": "^2.48.5",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   }
 }
