--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,21 @@
-{ // TypeScript configuration file: provides options to the TypeScript 
+{
+  // TypeScript configuration file: provides options to the TypeScript
   // compiler (tsc) and makes VSCode recognize this folder as a TS project,
   // enabling the VSCode build tasks "tsc: build" and "tsc: watch".
   "compilerOptions": {
-    "target": "es5",            // Compatible with older browsers
-    "module": "umd",            // Compatible with both Node.js and browser
+    "target": "es5", // Compatible with older browsers
+    "module": "umd", // Compatible with both Node.js and browser
     "moduleResolution": "node", // Tell tsc to look in node_modules for modules
-    "sourceMap": true,          // Creates *.js.map files
-    "jsx": "react",             // Causes inline XML (JSX code) to be expanded
-    "strict": true,             // Strict types, eg. prohibits `var x=0; x=null`
-    "alwaysStrict": true        // Enable JavaScript's "use strict" mode
+    "sourceMap": true, // Creates *.js.map files
+    "jsx": "react", // Causes inline XML (JSX code) to be expanded
+    "strict": true, // Strict types, eg. prohibits `var x=0; x=null`
+    "alwaysStrict": true // Enable JavaScript's "use strict" mode
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "client/src/styles/index.js",
+    "client/src/styles/global-style.js"
+  ],
   "exclude": ["node_modules"]
 }
