--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@types/jest": "^26.0.20",
     "concurrently": "^6.0.0",
     "express": "^4.17.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
-    "typescript": "^4.2.3",
-    "prettier": "^2.2.1"
+    "@types/request": "^2.48.5",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   }
 }
