--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
   "homepage": "https://github.com/crab-projects/spotify-social#readme",
   "dependencies": {
     "@types/jest": "^26.0.20",
+    "axios": "^0.21.1",
     "concurrently": "^6.0.0",
     "express": "^4.17.1",
-    "react-router-dom": "^5.2.0",
-    "request": "^2.88.2"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
-    "@types/request": "^2.48.5",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
