--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "@types/jest": "^26.0.20",
     "concurrently": "^6.0.0",
     "express": "^4.17.1",
-    "react-router-dom": "^5.2.0",
-    "request": "^2.88.2"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
