--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "cd client && npm install && npm run build",
-    "format": "npx prettier --write ."
+    "format": "npx prettier --write .", 
+    "postinstall": "tsc"
   },
   "repository": {
     "type": "git",
