--- a/package.json
+++ b/package.json
@@ -25,16 +25,17 @@
   },
   "homepage": "https://github.com/crab-projects/spotify-social#readme",
   "dependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.31",
     "@types/jest": "^26.0.20",
     "@types/request": "^2.48.5",
     "concurrently": "^6.0.0",
     "express": "^4.17.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "typescript": "^4.2.3"
+
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.31",
-    "prettier": "^2.2.1",
-    "typescript": "^4.2.3"
+    "prettier": "^2.2.1"
   }
 }
