--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "cd client && npm install && npm run build",
-    "format": "npx prettier --write .", 
+    "format": "npx prettier --write .",
     "postinstall": "tsc"
   },
   "repository": {
@@ -26,14 +26,14 @@
   "homepage": "https://github.com/crab-projects/spotify-social#readme",
   "dependencies": {
     "@types/express": "^4.17.11",
-    "@types/node": "^14.14.31",
     "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.31",
     "@types/request": "^2.48.5",
     "concurrently": "^6.0.0",
     "express": "^4.17.1",
     "react-router-dom": "^5.2.0",
+    "requests": "^0.3.0",
     "typescript": "^4.2.3"
-
   },
   "devDependencies": {
     "prettier": "^2.2.1"
