--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "concurrently": "^6.0.0",
     "express": "^4.17.1",
     "react-router-dom": "^5.2.0",
-    "requests": "^0.3.0",
+    "request": "^2.88.2",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
