--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
   "dependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.31",
-    "@types/request": "^2.48.5",
+    "axios": "^0.21.1",
     "concurrently": "^6.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "react-router-dom": "^5.2.0",
-    "request": "^2.88.2",
-    "typescript": "^4.2.3"
+    "find-config": "^1.0.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "prettier": "^2.2.1"
+    "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.31",
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
   }
 }
