--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/jest": "^26.0.20",
     "axios": "^0.21.1",
     "concurrently": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "find-config": "^1.0.0",
