--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "@fontsource/dm-sans": "^4.2.2",
     "@fontsource/roboto": "^4.2.2",
     "axios": "^0.21.1",
+    "chart.js": "^2.9.4",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
